[metadata]
name = urdfenvs
version = 0.10.2
description = Local copy of urdfenvs for the Albert example
author = Your Name
license = MIT

[options]
packages = find:
include_package_data = true
python_requires = >=3.8
install_requires =
    gymnasium
    numpy
    pybullet
    casadi 
    matplotlib
    yourdfpy
    robotmodels
    dill
    mpscenes
    tqdm